--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>
+            Start by searching for a recipe or an ingredient. You can upload
+            your own recipe too. Have fun!
+          </p>
         </div>
       </div>
     </div>
