--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </svg>
                 <span>Bookmarks</span>
               </button>
-              <div class="bookmarks">
+              <div class="bookmarks hidden">
                 <ul class="bookmarks__list">
                   <div class="message">
                     <div>
