--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     </div>
 
     <div class="overlay hidden"></div>
+
+    <div class="overlay-bookmark hidden"></div>
+
     <div class="add-recipe-window hidden">
       <button class="btn--close-modal">&times;</button>
       <form class="upload">
